FIX: Fix right global nav from squishing contents up

--- a/src/app/common/header/header.scss
+++ b/src/app/common/header/header.scss
@@ -5,6 +5,13 @@
   border-right: none;
   margin-bottom:0;
 
+  // Fix for dynamic content
+  .navbar-right {
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
   .dropdown-units {
     li:not(.divider) a {
       padding-top: 0.5em;
